# proactivity

./: .gitignore  LICENSE  PRIMITIVES.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  examples.yml  release.yml
docs/: api-surface.md  docs.json  implementation-philosophy.md  index.mdx  installation.mdx  proactive-wrapper-argument.md  quickstart.mdx
docs/concepts/: architecture.mdx  context-injection.mdx  goals.mdx  governance.mdx  memory.mdx  reflection.mdx  scheduling.mdx
docs/guides/: cost-control.mdx  custom-adapter.mdx  custom-stores-and-schedulers.mdx  primitives.mdx  runtime-goals.mdx  ship-to-production.mdx  webhook-wakes.mdx
docs/integrations/: adapters.mdx  eve.mdx  hermes.mdx  openclaw.mdx
docs/plugins/: hermes.mdx  openclaw.mdx  overview.mdx
docs/production/: deployment.mdx  observability.mdx  storage.mdx
docs/reference/: anthropic.mdx  eve.mdx  events.mdx  handle.mdx  langgraph.mdx  primitives.mdx  proactive.mdx  schedulers.mdx  stores.mdx  types.mdx
docs/resources/: examples.mdx  faq.mdx
docs/snippets/: install.mdx  memory-store-warning.mdx
examples/anthropic/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/eve/: .gitignore  README.md  (+3 more)
integrations/hermes/: .gitignore  README.md  pyproject.toml
integrations/hermes/proactivity_hermes/: __init__.py  governance.py  store.py  tools.py
integrations/hermes/tests/: test_cron.py  test_governance.py  test_middleware.py  test_plugin_load.py  test_plugin_smoke.py
migrations/: 001_initial.sql
src/: e2e.test.ts  integrations.test.ts
(+66 files in other folders)
